# papermodels

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-pytest.yml
Examples/: Example.ipynb
Examples/Example 1/model_files/toml/: CT0.2.toml  CT0.3.toml  FB0.2.toml  J0.1-0.toml  J0.1-1.toml  J0.1-2.toml  J0.1-3.toml  J0.1-4.toml
Examples/Example 2/: Example.ipynb
Examples/model_files/toml/: CB0.1.toml  CB0.2.toml  CB0.3.toml  CB0.4.toml  CB0.5.toml  CB0.6.toml  CB1.1.toml  CB1.2.toml  CT0.1.toml  CT0.4.toml  CT1.1.toml  CT1.2.toml  CT1.3.toml  CT1.4.toml  CT1.5.toml  CT1.6.toml  CT2.1.toml  CT2.2.toml  FB0.1.toml  FB1.1.toml  FB1.2.toml  FB2.1.toml  J0.1-5.toml  J0.1-6.toml  J0.1-7.toml  J0.1-8.toml  J1.1-0.toml  J1.1-1.toml  J1.1-10.toml  J1.1-11.toml  J1.1-12.toml  J1.1-13.toml  J1.1-14.toml  J1.1-2.toml  J1.1-3.toml  J1.1-4.toml  J1.1-5.toml  J1.1-6.toml  J1.1-7.toml  J1.1-8.toml  (+14 more)
src/: pyproject.toml
src/papermodels/: __init__.py
src/papermodels/datatypes/: analysis_models.py  annotation.py  beam_models.py  column_models.py  element.py  element_models.py  geometry_graph.py  joist.py  joist_models.py  load_graph.py  load_graph_old.py  loads.py  utils.py  wall_models.py
src/papermodels/db/: data_model.py
src/papermodels/fileio/: model_files.py  utils.py
src/papermodels/geometry/: geom_ops.py
src/papermodels/loads/: load_distribution.py  load_factors.py  utils.py
src/papermodels/models/: beams.py  distribution_functions.py  load_distribution.py  load_factors.py  load_graph.py  utils.py
src/papermodels/paper/: __init__.py  annotations.py  annotations_fdf.py  fdf.py  pdf.py  plot.py
src/papermodels/units/: parsing.py
tests/: test_annotations.py  test_geom.py  test_imports.py  test_load_distribution  test_load_distribution.py  test_tests.py
