[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "papermodels"
authors = [{name = "Connor Ferster", email = "connor@structuralpython.com"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: Apache Software License"]
dynamic = ["version", "description"]
dependencies = [
    "shapely >= 2.0.0",
    "matplotlib",
    "pandas >= 2.0.0",
    "pikepdf",
    "sqlalchemy",
    "sqlalchemy-utils",
    "parse",
    "colour",
    "pytest",
    "networkx",
    "numpy",
    "PyCBA >= 0.4.0",
    "PyNiteFEA >= 0.0.81",
    "rich",
    "forallpeople"
]


[project.urls]
Home = "https://github.com/structuralpython/papermodels"
